welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:8: error: ')' expected but 'return' found.
	return 0;
        ^